2004-07-06  Scott Smedley  <scottie7@tpg.com.au>

	* fvwm/fvwm.1.in:
	* fvwm/conditional.c:
	Extend "Test (Version >= x.y.z)" syntax to allow version comparison.

2004-07-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (GetResizeArguments):
	(GetResizeMoveArguments):
	(__resize_window):
	(__resize_step):
	(__resize_get_refpos):
	(__resize_get_dir_proximity):
	(__resize_get_dir_from_window):
	implemented fluxbox-like Alt-Button3 resizing

	* fvwm/virtual.c (HandlePaging):
	* fvwm/events.c (__merge_cr_moveresize):
	(__test_for_motion):
	(flush_property_notify):
	do not use XPutBackEvent as it shuffles events on the queue
	(test_button_event):
	(test_typed_window_event):
	new functions

	* libs/FEvent.c (fev_get_evpos_or_query):
	take pointer position from EnterNotify and LeaveNotify events

	* fvwm/move_resize.c (__move_loop):
	fixed multiple paging with certain SnapGrid / Move interactions
	(__resize_window):
	(__move_loop):
	* fvwm/virtual.c (HandlePaging):
	Workaround for buggy XFree not delivering some Pointer events
	simplified code

	* fvwm/virtual.c (MoveViewport):
	don't eat MotionNotify events

	* libs/FEvent.c (fev_get_last_event):
	new function
	(FWindowEvent):
	(FPutBackEvent):
	(FPeekIfEvent):
	(FPeekEvent):
	(FNextEvent):
	(FMaskEvent):
	(FIfEvent):
	(FCheckWindowEvent):
	(FCheckTypedWindowEvent):
	(FCheckTypedEvent):
	(FCheckMaskEvent):
	(FCheckIfEvent):
	keep a copy of the previous event in case FPutBackEvent is called

2004-06-30  Scott Smedley  <scottie7@tpg.com.au>

	* fvwm/fvwm.1.in:
	Indicate optional window argument in section headings for
	Key, Mouse, PointerKey & Stroke commands.
	Remove strange "-Key" option listed for PointerKey.

2004-06-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Fft.c (FftDrawString):
	* fvwm/session.c (get_version_string):
	* fvwm/module_interface.c (FlushMessageQueue):
	* fvwm/fvwm.c (SaveDesktopState):
	* fvwm/colorset.h:
	* fvwm/colorset.c (cleanup_colorsets):
	* libs/PictureUtils.c (struct):