@@ -1,3 +1,12 @@
+2004-07-06  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/move_resize.c (__resize_window):
+	Fixed event handling
+
+	* fvwm/virtual.c (HandlePaging):
+	removed check for leave events on pan frames; better query the pointer
+	each time
+
 2004-07-06  Scott Smedley  <scottie7@tpg.com.au>
 
 	* fvwm/fvwm.1.in:
